--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header__container">
     <div class="header__logo">
-      <a href="/dist/"><img src="img/лого.png" alt="logo" /></a>
+      <a href="/egoza/dist/"><img src="img/лого.png" alt="logo" /></a>
     </div>
 
     <button
@@ -61,7 +61,7 @@
         <a href="/egoza/dist/catalog">Каталог продукции</a>
       </li>
       <li class="nav__item">
-        <a href="">Наши проекты</a>
+        <a href="/egoza/dist/gallery">Наши проекты</a>
         <ul class="nav__list--2">
           <li class="nav__item"><a href="#">второй уровень</a></li>
           <li class="nav__item">
@@ -78,7 +78,26 @@
       <li class="nav__item"><a href="">Доставка и оплата</a></li>
       <li class="nav__item"><a href="">Гарантия</a></li>
       <li class="nav__item"><a href="">Партнёрам</a></li>
-      <li class="nav__item"><a href="/egoza/dist/about.html">О компании</a></li>
+      <li class="nav__item">
+        <a href="/egoza/dist/about">О компании</a>
+        <ul class="nav__list--2 menu">
+          <li class="nav__item">
+            <a href="/egoza/dist/news">Второй уровень</a>
+          </li>
+          <li class="nav__item">
+            <a href="/egoza/dist/news">Новости</a>
+            <ul class="nav__list--3 menu">
+              <li class="nav__item"><a href="#">третий уровень</a></li>
+              <li class="nav__item">
+                <a href="/egoza/dist/news-2"
+                  >«Русская стратегия» на 27-ой Международной выставке Securika
+                  Moscow 2022</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
       <li class="nav__item"><a href="">Отзывы</a></li>
       <li class="nav__item"><a href="/egoza/dist/contacts">Контакты</a></li>
     </ul>
@@ -101,26 +120,35 @@
       <input type="text" class="form-control" placeholder="Поиск по" />
     </form>
     <ul class="menu__list">
-      <li class="menu__item"><a href="/catalog">Каталог продукции</a></li>
+      <li class="menu__item">
+        <a href="/egoza/dist/catalog">Каталог продукции</a>
+      </li>
+      <li class="menu__item">
+        <a href="/egoza/dist/gallery">Наши проекты</a>
+      </li>
+      <li class="menu__item"><a href="">Доставка и оплата</a></li>
+      <li class="menu__item"><a href="">Гарантия</a></li>
+      <li class="menu__item"><a href="">Партнёрам</a></li>
       <li class="menu__item menu__item_parent item-parent_js">
-        <a href="">Наши проекты</a>
+        <a href="/egoza/dist/about">О компании</a>
         <ul class="menu__submenu menu">
-          <li class="menu__item"><a href="#">второй уровень</a></li>
+          <li class="menu__item">
+            <a href="/egoza/dist/news">Второй уровень</a>
+          </li>
           <li class="menu__item menu__item_parent item-parent_js">
-            <a href="#">второй уровень</a>
+            <a href="/egoza/dist/news">Новости</a>
             <ul class="menu__submenu menu">
               <li class="menu__item"><a href="#">третий уровень</a></li>
               <li class="menu__item">
-                <a href="#">третий уровень</a>
+                <a href="/egoza/dist/news-2"
+                  >«Русская стратегия» на 27-ой Международной выставке Securika
+                  Moscow 2022</a
+                >
               </li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="menu__item"><a href="">Доставка и оплата</a></li>
-      <li class="menu__item"><a href="">Гарантия</a></li>
-      <li class="menu__item"><a href="">Партнёрам</a></li>
-      <li class="menu__item"><a href="/egoza/dist/about">О компании</a></li>
       <li class="menu__item"><a href="">Отзывы</a></li>
       <li class="menu__item"><a href="/egoza/dist/contacts">Контакты</a></li>
     </ul>
