--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,9 @@
             </div>
           </div>
           <div class="section__footer">
-            <a href="#" class="section__link">Полный каталог</a>
+            <a href="/egoza/dist/catalog" class="section__link"
+              >Полный каталог</a
+            >
           </div>
         </div>
       </section>
@@ -316,7 +318,7 @@
             <img src="img/about/background2.png" alt="" />
           </div>
           <div class="section__footer">
-            <a href="">Подробнее о компании</a>
+            <a href="/egoza/dist/about">Подробнее о компании</a>
           </div>
         </div>
       </section>
@@ -435,7 +437,9 @@
             </div>
           </div>
           <div class="section__footer">
-            <a href="#" class="section__link">Подробнее</a>
+            <a href="/egoza/dist/sertificaty" class="section__link"
+              >Подробнее</a
+            >
           </div>
         </div>
       </section>
