--- a/src/news.html
+++ b/src/news.html
@@ -151,7 +151,7 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
