--- a/src/sertificaty.html
+++ b/src/sertificaty.html
@@ -134,9 +134,6 @@
               <img src="img/arrow-prev.png" alt="сертификат" />
             </div>
           </div>
-          <div class="section__footer">
-            <a href="#" class="section__link">Подробнее</a>
-          </div>
         </div>
       </section>
 
@@ -219,9 +216,6 @@
               <img src="img/arrow-prev.png" alt="сертификат" />
             </div>
           </div>
-          <div class="section__footer">
-            <a href="#" class="section__link">Подробнее</a>
-          </div>
         </div>
       </section>
 
@@ -256,7 +250,7 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
