--- a/src/catalog-2.html
+++ b/src/catalog-2.html
@@ -46,7 +46,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -96,7 +98,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -146,7 +150,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -196,7 +202,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -246,7 +254,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -296,7 +306,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -346,7 +358,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -396,7 +410,9 @@
               <div class="item__wrapper">
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
-                  <h6 class="item__title">Свая шуруп 57 мм</h6>
+                  <h6 class="item__title">
+                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                  </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
                     <li class="item__text active">
@@ -449,7 +465,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -500,7 +518,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -551,7 +571,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -602,7 +624,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -653,7 +677,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -704,7 +730,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -755,7 +783,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -806,7 +836,9 @@
                 <div class="item__wrapper">
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
-                    <h6 class="item__title">Свая шуруп 57 мм</h6>
+                    <h6 class="item__title">
+                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
                       <li class="item__text active">
@@ -893,7 +925,12 @@
             Срок расчета проекта 2 рабочих дня.
           </p>
 
-          <button type="button" class="section__btn btn--orange">
+          <button
+            type="button"
+            class="section__btn btn--orange"
+            data-bs-toggle="modal"
+            data-bs-target="#calculateModal"
+          >
             Оставить заявку на проект
           </button>
 
@@ -2411,12 +2448,14 @@
             предложение у наших менеджеров по телефонам или электронной почте.
           </p>
 
-          <a href="#" class="section__btn btn btn-link"> Подробнее о нас... </a>
+          <a href="/egoza/dist/about" class="section__btn btn btn-link">
+            Подробнее о нас...
+          </a>
         </div>
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
@@ -2526,6 +2565,76 @@
                       id="inputCheck2"
                     />
                     <label class="form-check-label" for="inputCheck2">
+                      Ознакомился с <a href="#">политикой конфидециальности</a>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="modal-btn">Отправить</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="modal fade"
+        id="calculateModal"
+        tabindex="-1"
+        aria-labelledby="calculateModal"
+        aria-hidden="true"
+        data-bs-theme="dark"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title fs-5">Рассчитать проект</h4>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form class="row g-3">
+                <div class="col-md-4">
+                  <label for="inputName3" class="form-label">Имя</label>
+                  <input type="text" class="form-control" id="inputName3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputTel3" class="form-label">Телефон</label>
+                  <input type="text" class="form-control" id="inputTel3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputEmail3" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail3" />
+                </div>
+
+                <div class="col-12">
+                  <label for="inputText3" class="form-label"
+                    >Опишите проект</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="inputText3"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <label for="inputFile3" class="form-label"
+                    >Приложить файл</label
+                  >
+                  <input class="form-control" type="file" id="inputFile3" />
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inputCheck3"
+                    />
+                    <label class="form-check-label" for="inputCheck3">
                       Ознакомился с <a href="#">политикой конфидециальности</a>
                     </label>
                   </div>
