--- a/src/catalog-3.html
+++ b/src/catalog-3.html
@@ -1568,7 +1568,12 @@
             Напишите нам, и мы свяжемся с Вами в течение 15 минут.
           </p>
 
-          <button type="button" class="section__btn btn--orange">
+          <button
+            type="button"
+            class="section__btn btn--orange"
+            data-bs-toggle="modal"
+            data-bs-target="#calculateModal"
+          >
             Рассчитать проект
           </button>
         </div>
@@ -1652,8 +1657,12 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться в общий каталог</a>
-        <a href="" class="section__link">Вернуться в каталог свай шуруп</a>
+        <a href="/egoza/dist/catalog" class="section__link"
+          >Вернуться в общий каталог</a
+        >
+        <a href="/egoza/dist/catalog-2" class="section__link"
+          >Вернуться в каталог свай шуруп</a
+        >
       </section>
 
       <section class="section section--feedback section--feedback-catalog-3">
@@ -1671,12 +1680,14 @@
             предложение у наших менеджеров по телефонам или электронной почте.
           </p>
 
-          <a href="#" class="section__btn btn btn-link"> Подробнее о нас... </a>
+          <a href="/egoza/dist/about" class="section__btn btn btn-link">
+            Подробнее о нас...
+          </a>
         </div>
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
@@ -1786,6 +1797,76 @@
                       id="inputCheck2"
                     />
                     <label class="form-check-label" for="inputCheck2">
+                      Ознакомился с <a href="#">политикой конфидециальности</a>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="modal-btn">Отправить</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="modal fade"
+        id="calculateModal"
+        tabindex="-1"
+        aria-labelledby="calculateModal"
+        aria-hidden="true"
+        data-bs-theme="dark"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title fs-5">Рассчитать проект</h4>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form class="row g-3">
+                <div class="col-md-4">
+                  <label for="inputName3" class="form-label">Имя</label>
+                  <input type="text" class="form-control" id="inputName3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputTel3" class="form-label">Телефон</label>
+                  <input type="text" class="form-control" id="inputTel3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputEmail3" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail3" />
+                </div>
+
+                <div class="col-12">
+                  <label for="inputText3" class="form-label"
+                    >Опишите проект</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="inputText3"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <label for="inputFile3" class="form-label"
+                    >Приложить файл</label
+                  >
+                  <input class="form-control" type="file" id="inputFile3" />
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inputCheck3"
+                    />
+                    <label class="form-check-label" for="inputCheck3">
                       Ознакомился с <a href="#">политикой конфидециальности</a>
                     </label>
                   </div>
