--- a/src/catalog.html
+++ b/src/catalog.html
@@ -37,7 +37,7 @@
             Винтовые сваи производства Завода винтовых свай Егоза
           </h2>
           <div class="section__grid">
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -54,7 +54,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -71,7 +71,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -88,7 +88,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -105,7 +105,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -122,7 +122,58 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
+              <img
+                src="img/product/Многовитковые 4.png"
+                class="item__image"
+                alt=""
+              />
+              <div class="item__content">
+                <h6 class="item__title">Сваи шуруп</h6>
+                <p class="item__text">
+                  Винтовая свая «шуруп» имеет вид металлической трубы с
+                  конусообразным наконечником и монтажным отверстием сверху.
+                </p>
+                <p class="item__text">
+                  Литой наконечник оснащен узкой многовитковой лопастью.
+                </p>
+              </div>
+            </a>
+            <a href="/egoza/dist/catalog-2" class="section__item item">
+              <img
+                src="img/product/Многовитковые 4.png"
+                class="item__image"
+                alt=""
+              />
+              <div class="item__content">
+                <h6 class="item__title">Сваи шуруп</h6>
+                <p class="item__text">
+                  Винтовая свая «шуруп» имеет вид металлической трубы с
+                  конусообразным наконечником и монтажным отверстием сверху.
+                </p>
+                <p class="item__text">
+                  Литой наконечник оснащен узкой многовитковой лопастью.
+                </p>
+              </div>
+            </a>
+            <a href="/egoza/dist/catalog-2" class="section__item item">
+              <img
+                src="img/product/Многовитковые 4.png"
+                class="item__image"
+                alt=""
+              />
+              <div class="item__content">
+                <h6 class="item__title">Сваи шуруп</h6>
+                <p class="item__text">
+                  Винтовая свая «шуруп» имеет вид металлической трубы с
+                  конусообразным наконечником и монтажным отверстием сверху.
+                </p>
+                <p class="item__text">
+                  Литой наконечник оснащен узкой многовитковой лопастью.
+                </p>
+              </div>
+            </a>
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -142,7 +193,7 @@
           </div>
           <div class="collapse" id="collapseExample">
             <div class="section__grid">
-              <a href="#" class="section__item item">
+              <a href="/egoza/dist/catalog-2" class="section__item item">
                 <img
                   src="img/product/Многовитковые 4.png"
                   class="item__image"
@@ -159,7 +210,7 @@
                   </p>
                 </div>
               </a>
-              <a href="#" class="section__item item">
+              <a href="/egoza/dist/catalog-2" class="section__item item">
                 <img
                   src="img/product/Многовитковые 4.png"
                   class="item__image"
@@ -176,7 +227,7 @@
                   </p>
                 </div>
               </a>
-              <a href="#" class="section__item item">
+              <a href="/egoza/dist/catalog-2" class="section__item item">
                 <img
                   src="img/product/Многовитковые 4.png"
                   class="item__image"
@@ -193,7 +244,7 @@
                   </p>
                 </div>
               </a>
-              <a href="#" class="section__item item">
+              <a href="/egoza/dist/catalog-2" class="section__item item">
                 <img
                   src="img/product/Многовитковые 4.png"
                   class="item__image"
@@ -232,7 +283,7 @@
             Свайно-винтовой фундамент
           </h2>
           <div class="section__grid">
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -249,7 +300,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -266,7 +317,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -283,7 +334,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -300,7 +351,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -317,7 +368,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -334,7 +385,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -351,7 +402,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1726,7 +1777,12 @@
             Срок расчета проекта 2 рабочих дня.
           </p>
 
-          <button type="button" class="btn--orange section__btn">
+          <button
+            type="button"
+            class="btn--orange section__btn"
+            data-bs-toggle="modal"
+            data-bs-target="#calculateModal"
+          >
             Оставить заявку на проект
           </button>
 
@@ -1823,7 +1879,7 @@
             Ограждающие конструкции производства Завода Егоза
           </h2>
           <div class="section__grid">
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1840,7 +1896,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1857,7 +1913,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1874,7 +1930,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1891,7 +1947,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1908,7 +1964,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1925,7 +1981,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1942,7 +1998,7 @@
                 </p>
               </div>
             </a>
-            <a href="#" class="section__item item">
+            <a href="/egoza/dist/catalog-2" class="section__item item">
               <img
                 src="img/product/Многовитковые 4.png"
                 class="item__image"
@@ -1964,7 +2020,7 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
@@ -2074,6 +2130,76 @@
                       id="inputCheck2"
                     />
                     <label class="form-check-label" for="inputCheck2">
+                      Ознакомился с <a href="#">политикой конфидециальности</a>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="modal-btn">Отправить</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="modal fade"
+        id="calculateModal"
+        tabindex="-1"
+        aria-labelledby="calculateModal"
+        aria-hidden="true"
+        data-bs-theme="dark"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title fs-5">Рассчитать проект</h4>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form class="row g-3">
+                <div class="col-md-4">
+                  <label for="inputName3" class="form-label">Имя</label>
+                  <input type="text" class="form-control" id="inputName3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputTel3" class="form-label">Телефон</label>
+                  <input type="text" class="form-control" id="inputTel3" />
+                </div>
+                <div class="col-md-4">
+                  <label for="inputEmail3" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="inputEmail3" />
+                </div>
+
+                <div class="col-12">
+                  <label for="inputText3" class="form-label"
+                    >Опишите проект</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="inputText3"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <label for="inputFile3" class="form-label"
+                    >Приложить файл</label
+                  >
+                  <input class="form-control" type="file" id="inputFile3" />
+                </div>
+                <div class="col-12">
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      id="inputCheck3"
+                    />
+                    <label class="form-check-label" for="inputCheck3">
                       Ознакомился с <a href="#">политикой конфидециальности</a>
                     </label>
                   </div>
