--- a/src/contacts.html
+++ b/src/contacts.html
@@ -286,8 +286,10 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
-        <a href="" class="section__link">Перейти в каталог</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/catalog" class="section__link"
+          >Перейти в каталог</a
+        >
         <a href="" class="section__link">Рассчитать проект</a>
       </section>
 
