--- a/src/news-2.html
+++ b/src/news-2.html
@@ -311,7 +311,12 @@
             Срок расчета проекта 2 рабочих дня.
           </p>
 
-          <button type="button" class="section__btn btn--orange">
+          <button
+            type="button"
+            class="section__btn btn--orange"
+            data-bs-toggle="modal"
+            data-bs-target="#calculateModal"
+          >
             Оставить заявку на расчет проекта
           </button>
 
@@ -435,7 +440,9 @@
             </div>
           </div>
           <div class="section__footer">
-            <a href="#" class="section__link">Подробнее</a>
+            <a href="/egoza/dist/sertificaty" class="section__link"
+              >Подробнее</a
+            >
           </div>
         </div>
       </section>
@@ -461,7 +468,7 @@
       </section>
 
       <section class="section section--link">
-        <a href="" class="section__link">Вернуться на главную</a>
+        <a href="/egoza/dist/" class="section__link">Вернуться на главную</a>
       </section>
 
       @@include('html/footer.html')
@@ -641,74 +648,6 @@
                       id="inputCheck3"
                     />
                     <label class="form-check-label" for="inputCheck3">
-                      Ознакомился с <a href="#">политикой конфидециальности</a>
-                    </label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <button type="submit" class="modal-btn">Отправить</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="modal fade"
-        id="submitModal"
-        tabindex="-1"
-        aria-labelledby="submitModal"
-        aria-hidden="true"
-        data-bs-theme="dark"
-      >
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title fs-5">Рассчитать проект</h4>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <form class="row g-3">
-                <div class="col-md-4">
-                  <label for="inputName4" class="form-label">Имя</label>
-                  <input type="text" class="form-control" id="inputName4" />
-                </div>
-                <div class="col-md-4">
-                  <label for="inputTel4" class="form-label">Телефон</label>
-                  <input type="text" class="form-control" id="inputTel4" />
-                </div>
-                <div class="col-md-4">
-                  <label for="inputEmail4" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4" />
-                </div>
-
-                <div class="col-12">
-                  <label for="inputText4" class="form-label">Комментарий</label>
-                  <textarea
-                    class="form-control"
-                    id="inputText4"
-                    rows="3"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <label for="inputFile4" class="form-label"
-                    >Приложить файл</label
-                  >
-                  <input class="form-control" type="file" id="inputFile4" />
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input
-                      class="form-check-input"
-                      type="checkbox"
-                      id="inputCheck4"
-                    />
-                    <label class="form-check-label" for="inputCheck4">
                       Ознакомился с <a href="#">политикой конфидециальности</a>
                     </label>
                   </div>
