--- a/src/catalog-2.html
+++ b/src/catalog-2.html
@@ -47,7 +47,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -99,7 +99,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -151,7 +151,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -203,7 +203,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -255,7 +255,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -307,111 +307,7 @@
                 <img src="img/product/2.png" class="item__image" alt="" />
                 <div class="item__content">
                   <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
-                  </h6>
-                  <p class="item__price">от 1139,49 руб.</p>
-                  <ul class="item__list">
-                    <li class="item__text active">
-                      <strong>Диаметр сваи:</strong> 76 мм.
-                    </li>
-                    <li class="item__text active">
-                      <strong>Длина сваи:</strong> 1000 / 1500 / 2000 / 3000 /
-                      4000 / 4500 / 5000 / 5500 / 6000 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Толщина стенки:</strong> 3.5 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Длина наконечника:</strong> 360 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Диаметр лопасти наконечника:</strong> 120 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Масса наконечника:</strong> 8.8 / 11.9 / 15.1 /
-                      18.2 / 21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 40.1 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Количество витков:</strong> 5 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Шаг витка:</strong> 60 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Масса сваи:</strong> 8.8 / 11.9 / 15.1 / 18.2 /
-                      21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 43.3 / 47 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Наконечник:</strong> литой
-                    </li>
-                  </ul>
-                  <button type="button" class="item__link btn btn-link">
-                    Развернуть
-                  </button>
-                  <button type="button" class="item__btn btn--orange">
-                    Купить
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="section__item item">
-              <div class="item__wrapper">
-                <img src="img/product/2.png" class="item__image" alt="" />
-                <div class="item__content">
-                  <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
-                  </h6>
-                  <p class="item__price">от 1139,49 руб.</p>
-                  <ul class="item__list">
-                    <li class="item__text active">
-                      <strong>Диаметр сваи:</strong> 76 мм.
-                    </li>
-                    <li class="item__text active">
-                      <strong>Длина сваи:</strong> 1000 / 1500 / 2000 / 3000 /
-                      4000 / 4500 / 5000 / 5500 / 6000 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Толщина стенки:</strong> 3.5 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Длина наконечника:</strong> 360 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Диаметр лопасти наконечника:</strong> 120 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Масса наконечника:</strong> 8.8 / 11.9 / 15.1 /
-                      18.2 / 21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 40.1 мм.
-                    </li>
-                    <li class="item__text">
-                      <strong>Количество витков:</strong> 5 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Шаг витка:</strong> 60 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Масса сваи:</strong> 8.8 / 11.9 / 15.1 / 18.2 /
-                      21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 43.3 / 47 кг.
-                    </li>
-                    <li class="item__text">
-                      <strong>Наконечник:</strong> литой
-                    </li>
-                  </ul>
-                  <button type="button" class="item__link btn btn-link">
-                    Развернуть
-                  </button>
-                  <button type="button" class="item__btn btn--orange">
-                    Купить
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="section__item item">
-              <div class="item__wrapper">
-                <img src="img/product/2.png" class="item__image" alt="" />
-                <div class="item__content">
-                  <h6 class="item__title">
-                    <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                    <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                   </h6>
                   <p class="item__price">от 1139,49 руб.</p>
                   <ul class="item__list">
@@ -466,7 +362,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
@@ -519,7 +415,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
@@ -572,7 +468,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
@@ -625,7 +521,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
@@ -678,7 +574,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
@@ -731,113 +627,7 @@
                   <img src="img/product/2.png" class="item__image" alt="" />
                   <div class="item__content">
                     <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
-                    </h6>
-                    <p class="item__price">от 1139,49 руб.</p>
-                    <ul class="item__list">
-                      <li class="item__text active">
-                        <strong>Диаметр сваи:</strong> 76 мм.
-                      </li>
-                      <li class="item__text active">
-                        <strong>Длина сваи:</strong> 1000 / 1500 / 2000 / 3000 /
-                        4000 / 4500 / 5000 / 5500 / 6000 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Толщина стенки:</strong> 3.5 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Длина наконечника:</strong> 360 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Диаметр лопасти наконечника:</strong> 120 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Масса наконечника:</strong> 8.8 / 11.9 / 15.1 /
-                        18.2 / 21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 40.1
-                        мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Количество витков:</strong> 5 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Шаг витка:</strong> 60 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Масса сваи:</strong> 8.8 / 11.9 / 15.1 / 18.2 /
-                        21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 43.3 / 47 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Наконечник:</strong> литой
-                      </li>
-                    </ul>
-                    <button type="button" class="item__link btn btn-link">
-                      Развернуть
-                    </button>
-                    <button type="button" class="item__btn btn--orange">
-                      Купить
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="section__item item">
-                <div class="item__wrapper">
-                  <img src="img/product/2.png" class="item__image" alt="" />
-                  <div class="item__content">
-                    <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
-                    </h6>
-                    <p class="item__price">от 1139,49 руб.</p>
-                    <ul class="item__list">
-                      <li class="item__text active">
-                        <strong>Диаметр сваи:</strong> 76 мм.
-                      </li>
-                      <li class="item__text active">
-                        <strong>Длина сваи:</strong> 1000 / 1500 / 2000 / 3000 /
-                        4000 / 4500 / 5000 / 5500 / 6000 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Толщина стенки:</strong> 3.5 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Длина наконечника:</strong> 360 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Диаметр лопасти наконечника:</strong> 120 мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Масса наконечника:</strong> 8.8 / 11.9 / 15.1 /
-                        18.2 / 21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 40.1
-                        мм.
-                      </li>
-                      <li class="item__text">
-                        <strong>Количество витков:</strong> 5 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Шаг витка:</strong> 60 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Масса сваи:</strong> 8.8 / 11.9 / 15.1 / 18.2 /
-                        21.3 / 24.4 / 27.6 / 30.7 / 33.8 / 36.9 / 43.3 / 47 кг.
-                      </li>
-                      <li class="item__text">
-                        <strong>Наконечник:</strong> литой
-                      </li>
-                    </ul>
-                    <button type="button" class="item__link btn btn-link">
-                      Развернуть
-                    </button>
-                    <button type="button" class="item__btn btn--orange">
-                      Купить
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="section__item item">
-                <div class="item__wrapper">
-                  <img src="img/product/2.png" class="item__image" alt="" />
-                  <div class="item__content">
-                    <h6 class="item__title">
-                      <a href="/egoza/dist/catalog-3/">Свая шуруп 57 мм</a>
+                      <a href="/egoza/dist/catalog-3">Свая шуруп 57 мм</a>
                     </h6>
                     <p class="item__price">от 1139,49 руб.</p>
                     <ul class="item__list">
