--- a/src/gallery.html
+++ b/src/gallery.html
@@ -33,7 +33,7 @@
           <ul class="breadcrumb">
             <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/egoza/dist/about.html"></a> О компании
+              <a href="/egoza/dist/about"></a>О компании
             </li>
             <li class="breadcrumb__item">Галерея</li>
           </ul>
