--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -7,21 +7,29 @@
       <div class="footer__menu">
         <nav class="footer__nav">
           <ul class="footer__list">
-            <li class="footer__item"><a href="#">Каталог продукции</a></li>
-            <li class="footer__item"><a href="#">О компании</a></li>
             <li class="footer__item">
-              <a href="#">Фундамент на винтовых сваях</a>
+              <a href="/egoza/dist/catalog">Каталог продукции</a>
+            </li>
+            <li class="footer__item">
+              <a href="/egoza/dist/about">О компании</a>
+            </li>
+            <li class="footer__item">
+              <a href="/egoza/dist/catalog-2">Фундамент на винтовых сваях</a>
             </li>
             <li class="footer__item"><a href="#">Проектировщикам</a></li>
-            <li class="footer__item"><a href="#">Новости</a></li>
+            <li class="footer__item"><a href="/egoza/dist/news">Новости</a></li>
             <li class="footer__item"><a href="#">Полезные статьи </a></li>
           </ul>
         </nav>
         <nav class="footer__nav mt-4">
           <ul class="footer__list">
-            <li class="footer__item"><a href="#">Сертификаты</a></li>
+            <li class="footer__item">
+              <a href="/egoza/dist/sertificaty">Сертификаты</a>
+            </li>
             <li class="footer__item"><a href="#">Фото</a></li>
-            <li class="footer__item"><a href="#">Отзывы</a></li>
+            <li class="footer__item">
+              <a href="/egoza/dist/sertificaty">Отзывы</a>
+            </li>
             <li class="footer__item"><a href="#">Города</a></li>
             <li class="footer__item">
               <a href="#">Политика обработки персональных данных </a>
