--- a/src/html/header.html
+++ b/src/html/header.html
@@ -98,7 +98,7 @@
           </li>
         </ul>
       </li>
-      <li class="nav__item"><a href="">Отзывы</a></li>
+      <li class="nav__item"><a href="/egoza/dist/sertificaty">Отзывы</a></li>
       <li class="nav__item"><a href="/egoza/dist/contacts">Контакты</a></li>
     </ul>
   </div>
