--- a/src/sertificaty.html
+++ b/src/sertificaty.html
@@ -33,7 +33,7 @@
           <ul class="breadcrumb">
             <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/dist/about/">О компании</a>
+              <a href="/dist/about">О компании</a>
             </li>
             <li class="breadcrumb__item">Сертификаты и награды</li>
           </ul>
