--- a/src/catalog-3.html
+++ b/src/catalog-3.html
@@ -30,10 +30,10 @@
           <ul class="breadcrumb">
             <li class="breadcrumb__item"><a href="/egoza/dist/">Главная</a></li>
             <li class="breadcrumb__item">
-              <a href="/egoza/dist/catalog/">Каталог продукции</a>
+              <a href="/egoza/dist/catalog">Каталог продукции</a>
             </li>
             <li class="breadcrumb__item">
-              <a href="#">Винтовые сваи шуруп</a>
+              <a href="/egoza/dist/catalog-2">Винтовые сваи шуруп</a>
             </li>
             <li class="breadcrumb__item">Свая шуруп 57 мм</li>
           </ul>
